# social

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  INFRASTRUCTURE.md  Makefile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 659f7adc27d7_initial_tables.py  d953dc726d73_add_next_retry_at_to_posts.py
scripts/: entrypoint.sh
src/social/: config.py  main.py  worker.py
src/social/api/: deps.py  router.py
src/social/api/v1/: accounts.py  entities.py  health.py  posts.py
src/social/core/: encryption.py  enums.py  exceptions.py  security.py
src/social/db/: base.py  deps.py  models.py  session.py
src/social/models/: __init__.py
src/social/schemas/: accounts.py  entities.py  posts.py
src/social/services/: account_service.py  entity_service.py  post_service.py  publish_service.py
